# Real-time_Distributed_Consensus_Engine

./: .gitignore  Cargo.toml  GITHUB_READY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  demo.sh  verify.ps1
cli/: Cargo.toml
cli/src/: main.rs
deployment/docker/: Dockerfile  docker-compose.yml  prometheus.yml
deployment/helm/raft-cluster/: Chart.yaml  values.yaml
deployment/helm/raft-cluster/templates/: statefulset.yaml
deployment/k8s/: configmap.yaml  namespace.yaml  service.yaml  statefulset.yaml
proto/: Cargo.toml  build.rs  raft.proto
proto/src/: generated.rs  lib.rs
raft-core/: Cargo.toml
raft-core/src/: election.rs  error.rs  event_loop.rs  lib.rs  log.rs  node.rs  replication.rs  state.rs  tests.rs  types.rs
server/: Cargo.toml
server/src/: config.rs  error.rs  grpc_server.rs  lib.rs  main.rs  metrics.rs
state/: Cargo.toml
state/src/: error.rs  kv_store.rs  lib.rs  rocksdb_store.rs  state_machine.rs
tests/: integration_test.rs
