[workspace]
members = [
    "raft-core",
    "proto", 
    "server",
    "state",
    "cli"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# gRPC and protobuf
tonic = "0.10"
tonic-build = "0.10"
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"



# Metrics and observability
prometheus = "0.13"
axum = "0.7"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }

# Testing
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
