[package]
name = "raft-core"
version = "0.1.0"
edition = "2021"
description = "Core Raft consensus algorithm implementation"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { workspace = true }
