[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "gRPC server implementation for Raft nodes"

[[bin]]
name = "raft-server"
path = "src/main.rs"

[dependencies]
raft-core = { path = "../raft-core" }
proto = { path = "../proto" }
state = { path = "../state" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Metrics and HTTP server
prometheus = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
